--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 section {
-  padding: 100px 10%;
+  padding: 80px 10%;
   min-height: 50vh;
 }
 
@@ -263,8 +263,9 @@ nav ul li a:hover {
 /* --- Projects Section --- */
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25px, 1fr));
+  grid-auto-flow: column;
   gap: 30px;
+
   margin-top: 40px;
 }
 
@@ -304,7 +305,7 @@ nav ul li a:hover {
 /* ************************* */
 
 .cta-text-box {
-  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+  padding: 3.4rem 2.4rem 2.4rem 2.4rem;
   color: #000000;
   background-color: #ffb44a;
   border-radius: 11px;
@@ -318,7 +319,7 @@ nav ul li a:hover {
 .cta-text {
   font-size: 1.1rem;
   line-height: 1.8rem;
-  margin-bottom: 4.8rem;
+  margin-bottom: 1%;
 }
 
 .cta-form {
@@ -373,7 +374,7 @@ footer {
   text-align: center;
   padding: 20px;
   background: #0a0a0a;
-  color: #555;
+  color: #a0a0a0;
 }
 
 /* --- Scroll Fade Animation --- */
